<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DestinationDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/ic_arrow_left"
                    android:contentDescription="@string/home_button"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="16dp" />

                <TextView
                    android:id="@+id/back_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/back"
                    android:textAllCaps="true"
                    android:textColor="@color/md_theme_primary"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Place Name -->
                <TextView
                    android:id="@+id/place_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/abril_fatface_regular"
                    android:gravity="center"
                    android:text="@string/place_name"
                    android:textAllCaps="true"
                    android:textColor="@color/md_theme_onSurface"
                    android:textSize="25sp" />

                <!-- Place Image -->
                <LinearLayout
                    android:id="@+id/img_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="10dp">

                    <ImageView
                        android:id="@+id/place_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/bg_rounded_corners"
                        android:clipToOutline="true"
                        android:contentDescription="@string/destination_image"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_grotto_shrine"
                        tools:targetApi="s" />
                </LinearLayout>

            </LinearLayout>

            <!-- Place Information -->
            <LinearLayout
                android:id="@+id/info_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="4dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/md_theme_primaryContainer"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/place_loc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/loc_csjdm"
                                android:textColor="@color/md_theme_onPrimaryContainer"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:drawableStartCompat="@drawable/ic_pin"
                                app:drawableTint="@color/md_theme_onPrimaryContainer" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/md_theme_onPrimaryContainer"/>

                        <TextView
                            android:id="@+id/place_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="32dp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/place_description"
                            android:textColor="@color/md_theme_onTertiaryContainer"
                            android:textSize="14sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>