<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/placeCardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:backgroundTint="#00FFFFFF"
        android:padding="4dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/place_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/place_img"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@drawable/bg_place_card_img"
                android:contentDescription="@string/place_card"
                android:scaleType="fitXY"
                android:src="@drawable/img_grotto_shrine"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:id="@+id/place_info"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/bg_place_card_info"
                android:orientation="vertical"
                android:padding="8dp"
                android:textAlignment="textStart">

                <TextView
                    android:id="@+id/place_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_black"
                    android:maxLines="2"
                    android:text="@string/place_name"
                    android:textColor="@color/md_theme_onPrimaryContainer"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/place_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_light"
                    android:maxLines="5"
                    android:text="@string/description"
                    android:textColor="@color/md_theme_onPrimaryContainer"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>